# fraud_pipeline

./: .gitignore  Dockerfile  Makefile  README.md  proposal.md  pyproject.toml
config/: __init__.py  config.json  config.py  model_selection.json  training.json
pipeline/: eda.ipynb
pipeline/eda/: eda.py
pipeline/evaluator/: eval.py  evaluate.py
pipeline/preprocess/: dataset.py  process_data.py  utils.py
pipeline/processor/: process_data.py
pipeline/trainer/: base_trainer.py  model_selection.py  sklearn_trainer.py  train.py  utils.py
