[tool.poetry]
name = "fraud-pipeline"
version = "0.1.0"
description = ""
authors = ["JafetSierra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
typer = "^0.12.3"
pylint = "^3.2.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
